tests-integration/tests/snapshots/lsp__001_definition_local_main.snap
---
source: tests-integration/tests/lsp.rs
expression: report
---
GotoDefinition at Position { line: 6, character: 6 }

Scalar(
    Location {
        uri: Url {
            scheme: "file",
            cannot_be_a_base: false,
            username: "",
            password: None,
            host: None,
            port: None,
            path: "./tests-integration/fixtures/lsp/001_definition_local/Main.purs",
            query: None,
            fragment: None,
        },
        range: Range {
            start: Position {
                line: 2,
                character: 0,
            },
            end: Position {
                line: 3,
                character: 9,
            },
        },
    },
)


GotoDefinition at Position { line: 10, character: 28 }

Scalar(
    Location {
        uri: Url {
            scheme: "file",
            cannot_be_a_base: false,
            username: "",
            password: None,
            host: None,
            port: None,
            path: "./tests-integration/fixtures/lsp/001_definition_local/Main.purs",
            query: None,
            fragment: None,
        },
        range: Range {
            start: Position {
                line: 10,
                character: 10,
            },
            end: Position {
                line: 10,
                character: 13,
            },
        },
    },
)


GotoDefinition at Position { line: 10, character: 33 }

Scalar(
    Location {
        uri: Url {
            scheme: "file",
            cannot_be_a_base: false,
            username: "",
            password: None,
            host: None,
            port: None,
            path: "./tests-integration/fixtures/lsp/001_definition_local/Main.purs",
            query: None,
            fragment: None,
        },
        range: Range {
            start: Position {
                line: 10,
                character: 14,
            },
            end: Position {
                line: 10,
                character: 17,
            },
        },
    },
)


GotoDefinition at Position { line: 10, character: 39 }

Scalar(
    Location {
        uri: Url {
            scheme: "file",
            cannot_be_a_base: false,
            username: "",
            password: None,
            host: None,
            port: None,
            path: "./tests-integration/fixtures/lsp/001_definition_local/Main.purs",
            query: None,
            fragment: None,
        },
        range: Range {
            start: Position {
                line: 10,
                character: 18,
            },
            end: Position {
                line: 10,
                character: 23,
            },
        },
    },
)


GotoDefinition at Position { line: 19, character: 6 }

Scalar(
    Location {
        uri: Url {
            scheme: "file",
            cannot_be_a_base: false,
            username: "",
            password: None,
            host: None,
            port: None,
            path: "./tests-integration/fixtures/lsp/001_definition_local/Main.purs",
            query: None,
            fragment: None,
        },
        range: Range {
            start: Position {
                line: 16,
                character: 4,
            },
            end: Position {
                line: 17,
                character: 13,
            },
        },
    },
)


GotoDefinition at Position { line: 19, character: 12 }

Scalar(
    Location {
        uri: Url {
            scheme: "file",
            cannot_be_a_base: false,
            username: "",
            password: None,
            host: None,
            port: None,
            path: "./tests-integration/fixtures/lsp/001_definition_local/Main.purs",
            query: None,
            fragment: None,
        },
        range: Range {
            start: Position {
                line: 16,
                character: 4,
            },
            end: Position {
                line: 17,
                character: 13,
            },
        },
    },
)


GotoDefinition at Position { line: 24, character: 9 }

Scalar(
    Location {
        uri: Url {
            scheme: "file",
            cannot_be_a_base: false,
            username: "",
            password: None,
            host: None,
            port: None,
            path: "./tests-integration/fixtures/lsp/001_definition_local/Main.purs",
            query: None,
            fragment: None,
        },
        range: Range {
            start: Position {
                line: 22,
                character: 0,
            },
            end: Position {
                line: 22,
                character: 31,
            },
        },
    },
)


GotoDefinition at Position { line: 26, character: 8 }

Scalar(
    Location {
        uri: Url {
            scheme: "file",
            cannot_be_a_base: false,
            username: "",
            password: None,
            host: None,
            port: None,
            path: "./tests-integration/fixtures/lsp/001_definition_local/Main.purs",
            query: None,
            fragment: None,
        },
        range: Range {
            start: Position {
                line: 22,
                character: 15,
            },
            end: Position {
                line: 22,
                character: 21,
            },
        },
    },
)


GotoDefinition at Position { line: 29, character: 12 }

Scalar(
    Location {
        uri: Url {
            scheme: "file",
            cannot_be_a_base: false,
            username: "",
            password: None,
            host: None,
            port: None,
            path: "./tests-integration/fixtures/lsp/001_definition_local/Main.purs",
            query: None,
            fragment: None,
        },
        range: Range {
            start: Position {
                line: 22,
                character: 0,
            },
            end: Position {
                line: 22,
                character: 31,
            },
        },
    },
)


GotoDefinition at Position { line: 31, character: 11 }

Scalar(
    Location {
        uri: Url {
            scheme: "file",
            cannot_be_a_base: false,
            username: "",
            password: None,
            host: None,
            port: None,
            path: "./tests-integration/fixtures/lsp/001_definition_local/Main.purs",
            query: None,
            fragment: None,
        },
        range: Range {
            start: Position {
                line: 22,
                character: 24,
            },
            end: Position {
                line: 22,
                character: 31,
            },
        },
    },
)


GotoDefinition at Position { line: 36, character: 3 }

Scalar(
    Location {
        uri: Url {
            scheme: "file",
            cannot_be_a_base: false,
            username: "",
            password: None,
            host: None,
            port: None,
            path: "./tests-integration/fixtures/lsp/001_definition_local/Main.purs",
            query: None,
            fragment: None,
        },
        range: Range {
            start: Position {
                line: 22,
                character: 15,
            },
            end: Position {
                line: 22,
                character: 21,
            },
        },
    },
)


GotoDefinition at Position { line: 39, character: 3 }

Scalar(
    Location {
        uri: Url {
            scheme: "file",
            cannot_be_a_base: false,
            username: "",
            password: None,
            host: None,
            port: None,
            path: "./tests-integration/fixtures/lsp/001_definition_local/Main.purs",
            query: None,
            fragment: None,
        },
        range: Range {
            start: Position {
                line: 22,
                character: 24,
            },
            end: Position {
                line: 22,
                character: 31,
            },
        },
    },
)
