tests-integration/tests/snapshots/lsp__002_definition_import_main.snap
---
source: tests-integration/tests/lsp.rs
expression: report
---
GotoDefinition at Position { line: 2, character: 8 }

Scalar(
    Location {
        uri: Url {
            scheme: "file",
            cannot_be_a_base: false,
            username: "",
            password: None,
            host: None,
            port: None,
            path: "./tests-integration/fixtures/lsp/002_definition_import/Lib.purs",
            query: None,
            fragment: None,
        },
        range: Range {
            start: Position {
                line: 0,
                character: 0,
            },
            end: Position {
                line: 15,
                character: 0,
            },
        },
    },
)


GotoDefinition at Position { line: 2, character: 13 }

Scalar(
    Location {
        uri: Url {
            scheme: "file",
            cannot_be_a_base: false,
            username: "",
            password: None,
            host: None,
            port: None,
            path: "./tests-integration/fixtures/lsp/002_definition_import/Lib.purs",
            query: None,
            fragment: None,
        },
        range: Range {
            start: Position {
                line: 2,
                character: 0,
            },
            end: Position {
                line: 3,
                character: 9,
            },
        },
    },
)


GotoDefinition at Position { line: 2, character: 19 }

Scalar(
    Location {
        uri: Url {
            scheme: "file",
            cannot_be_a_base: false,
            username: "",
            password: None,
            host: None,
            port: None,
            path: "./tests-integration/fixtures/lsp/002_definition_import/Lib.purs",
            query: None,
            fragment: None,
        },
        range: Range {
            start: Position {
                line: 5,
                character: 0,
            },
            end: Position {
                line: 5,
                character: 31,
            },
        },
    },
)


GotoDefinition at Position { line: 2, character: 30 }

Scalar(
    Location {
        uri: Url {
            scheme: "file",
            cannot_be_a_base: false,
            username: "",
            password: None,
            host: None,
            port: None,
            path: "./tests-integration/fixtures/lsp/002_definition_import/Lib.purs",
            query: None,
            fragment: None,
        },
        range: Range {
            start: Position {
                line: 10,
                character: 0,
            },
            end: Position {
                line: 10,
                character: 17,
            },
        },
    },
)


GotoDefinition at Position { line: 2, character: 41 }

Scalar(
    Location {
        uri: Url {
            scheme: "file",
            cannot_be_a_base: false,
            username: "",
            password: None,
            host: None,
            port: None,
            path: "./tests-integration/fixtures/lsp/002_definition_import/Lib.purs",
            query: None,
            fragment: None,
        },
        range: Range {
            start: Position {
                line: 14,
                character: 0,
            },
            end: Position {
                line: 14,
                character: 23,
            },
        },
    },
)


GotoDefinition at Position { line: 6, character: 7 }

Scalar(
    Location {
        uri: Url {
            scheme: "file",
            cannot_be_a_base: false,
            username: "",
            password: None,
            host: None,
            port: None,
            path: "./tests-integration/fixtures/lsp/002_definition_import/Lib.purs",
            query: None,
            fragment: None,
        },
        range: Range {
            start: Position {
                line: 2,
                character: 0,
            },
            end: Position {
                line: 3,
                character: 9,
            },
        },
    },
)


GotoDefinition at Position { line: 9, character: 24 }

Scalar(
    Location {
        uri: Url {
            scheme: "file",
            cannot_be_a_base: false,
            username: "",
            password: None,
            host: None,
            port: None,
            path: "./tests-integration/fixtures/lsp/002_definition_import/Lib.purs",
            query: None,
            fragment: None,
        },
        range: Range {
            start: Position {
                line: 5,
                character: 0,
            },
            end: Position {
                line: 5,
                character: 31,
            },
        },
    },
)


GotoDefinition at Position { line: 9, character: 29 }

Scalar(
    Location {
        uri: Url {
            scheme: "file",
            cannot_be_a_base: false,
            username: "",
            password: None,
            host: None,
            port: None,
            path: "./tests-integration/fixtures/lsp/002_definition_import/Main.purs",
            query: None,
            fragment: None,
        },
        range: Range {
            start: Position {
                line: 9,
                character: 15,
            },
            end: Position {
                line: 9,
                character: 16,
            },
        },
    },
)


GotoDefinition at Position { line: 11, character: 8 }

Scalar(
    Location {
        uri: Url {
            scheme: "file",
            cannot_be_a_base: false,
            username: "",
            password: None,
            host: None,
            port: None,
            path: "./tests-integration/fixtures/lsp/002_definition_import/Lib.purs",
            query: None,
            fragment: None,
        },
        range: Range {
            start: Position {
                line: 5,
                character: 15,
            },
            end: Position {
                line: 5,
                character: 21,
            },
        },
    },
)


GotoDefinition at Position { line: 14, character: 22 }

Scalar(
    Location {
        uri: Url {
            scheme: "file",
            cannot_be_a_base: false,
            username: "",
            password: None,
            host: None,
            port: None,
            path: "./tests-integration/fixtures/lsp/002_definition_import/Lib.purs",
            query: None,
            fragment: None,
        },
        range: Range {
            start: Position {
                line: 5,
                character: 0,
            },
            end: Position {
                line: 5,
                character: 31,
            },
        },
    },
)


GotoDefinition at Position { line: 16, character: 11 }

Scalar(
    Location {
        uri: Url {
            scheme: "file",
            cannot_be_a_base: false,
            username: "",
            password: None,
            host: None,
            port: None,
            path: "./tests-integration/fixtures/lsp/002_definition_import/Lib.purs",
            query: None,
            fragment: None,
        },
        range: Range {
            start: Position {
                line: 5,
                character: 24,
            },
            end: Position {
                line: 5,
                character: 31,
            },
        },
    },
)


GotoDefinition at Position { line: 20, character: 10 }

Scalar(
    Location {
        uri: Url {
            scheme: "file",
            cannot_be_a_base: false,
            username: "",
            password: None,
            host: None,
            port: None,
            path: "./tests-integration/fixtures/lsp/002_definition_import/Lib.purs",
            query: None,
            fragment: None,
        },
        range: Range {
            start: Position {
                line: 10,
                character: 0,
            },
            end: Position {
                line: 10,
                character: 17,
            },
        },
    },
)


GotoDefinition at Position { line: 24, character: 12 }

Scalar(
    Location {
        uri: Url {
            scheme: "file",
            cannot_be_a_base: false,
            username: "",
            password: None,
            host: None,
            port: None,
            path: "./tests-integration/fixtures/lsp/002_definition_import/Lib.purs",
            query: None,
            fragment: None,
        },
        range: Range {
            start: Position {
                line: 10,
                character: 0,
            },
            end: Position {
                line: 10,
                character: 17,
            },
        },
    },
)


GotoDefinition at Position { line: 27, character: 23 }

Scalar(
    Location {
        uri: Url {
            scheme: "file",
            cannot_be_a_base: false,
            username: "",
            password: None,
            host: None,
            port: None,
            path: "./tests-integration/fixtures/lsp/002_definition_import/Lib.purs",
            query: None,
            fragment: None,
        },
        range: Range {
            start: Position {
                line: 14,
                character: 0,
            },
            end: Position {
                line: 14,
                character: 23,
            },
        },
    },
)
