tests-integration/tests/snapshots/lsp__005_completion_local_main.snap
---
source: tests-integration/tests/lsp.rs
expression: report
---
Completion at Position { line: 13, character: 5 }

```
    v 
--   ^
```

╭─────────┬────────────────┬─────────────────────┬─────────────────────────╮
│  label  │  label_detail  │  label_description  │  additional_text_edits  │
├─────────┼────────────────┼─────────────────────┼─────────────────────────┤
│  vTop   │   ...          │  Local              │  ...                    │
╰─────────┴────────────────┴─────────────────────┴─────────────────────────╯


Completion at Position { line: 17, character: 10 }

```
check2 = J
--        ^
```

╭─────────┬────────────────┬─────────────────────┬─────────────────────────╮
│  label  │  label_detail  │  label_description  │  additional_text_edits  │
├─────────┼────────────────┼─────────────────────┼─────────────────────────┤
│  Just   │   ...          │  Local              │  ...                    │
╰─────────┴────────────────┴─────────────────────┴─────────────────────────╯


Completion at Position { line: 21, character: 10 }

```
check3 = N
--        ^
```

╭───────────┬────────────────┬─────────────────────┬─────────────────────────╮
│  label    │  label_detail  │  label_description  │  additional_text_edits  │
├───────────┼────────────────┼─────────────────────┼─────────────────────────┤
│  Nothing  │   ...          │  Local              │  ...                    │
╰───────────┴────────────────┴─────────────────────┴─────────────────────────╯


Completion at Position { line: 24, character: 15 }

```
type Check4 = M
--             ^
```

╭─────────┬──────────────────────┬─────────────────────┬───────────────────────────────╮
│  label  │  label_detail        │  label_description  │  additional_text_edits        │
├─────────┼──────────────────────┼─────────────────────┼───────────────────────────────┤
│  Maybe  │   ...                │  Local              │  ...                          │
├─────────┼──────────────────────┼─────────────────────┼───────────────────────────────┤
│  Mul    │   (import Prim.Int)  │  Prim.Int           │  1:0 .. 1:0                   │
│         │                      │                     │  import Prim.Int (class Mul)  │
╰─────────┴──────────────────────┴─────────────────────┴───────────────────────────────╯
