tests-integration/tests/snapshots/lsp__007_completion_partial_token_main.snap
---
source: tests-integration/tests/lsp.rs
expression: report
---
Completion at Position { line: 4, character: 9 }

[
    CompletionItem {
        label: "life",
        label_details: Some(
            CompletionItemLabelDetails {
                detail: None,
                description: Some(
                    "Local",
                ),
            },
        ),
        kind: Some(
            Value,
        ),
        detail: None,
        documentation: Some(
            MarkupContent(
                MarkupContent {
                    kind: Markdown,
                    value: "",
                },
            ),
        ),
        deprecated: None,
        preselect: None,
        sort_text: None,
        filter_text: None,
        insert_text: None,
        insert_text_format: None,
        insert_text_mode: None,
        text_edit: None,
        additional_text_edits: None,
        command: None,
        commit_characters: None,
        data: None,
        tags: None,
    },
    CompletionItem {
        label: "check",
        label_details: Some(
            CompletionItemLabelDetails {
                detail: None,
                description: Some(
                    "Local",
                ),
            },
        ),
        kind: Some(
            Value,
        ),
        detail: None,
        documentation: Some(
            MarkupContent(
                MarkupContent {
                    kind: Markdown,
                    value: "",
                },
            ),
        ),
        deprecated: None,
        preselect: None,
        sort_text: None,
        filter_text: None,
        insert_text: None,
        insert_text_format: None,
        insert_text_mode: None,
        text_edit: None,
        additional_text_edits: None,
        command: None,
        commit_characters: None,
        data: None,
        tags: None,
    },
]
