tests-integration/tests/snapshots/lsp__008_completion_import_main.snap
---
source: tests-integration/tests/lsp.rs
expression: report
---
Completion at Position { line: 7, character: 7 }

```
ref = l
--     ^
```

╭───────────────────┬─────────────────┬─────────────────────┬─────────────────────────╮
│  label            │  label_detail   │  label_description  │  additional_text_edits  │
├───────────────────┼─────────────────┼─────────────────────┼─────────────────────────┤
│  moduleNameQ      │   ...           │  Local              │  ...                    │
├───────────────────┼─────────────────┼─────────────────────┼─────────────────────────┤
│  fullModuleNameQ  │   ...           │  Local              │  ...                    │
├───────────────────┼─────────────────┼─────────────────────┼─────────────────────────┤
│  life             │   ...           │  Lib                │  ...                    │
├───────────────────┼─────────────────┼─────────────────────┼─────────────────────────┤
│  life             │   (import Lib)  │  Lib                │  ...                    │
╰───────────────────┴─────────────────┴─────────────────────┴─────────────────────────╯


Completion at Position { line: 10, character: 24 }

```
just :: forall a. a -> M
--                      ^
```

╭─────────┬──────────────────────┬─────────────────────┬───────────────────────────────╮
│  label  │  label_detail        │  label_description  │  additional_text_edits        │
├─────────┼──────────────────────┼─────────────────────┼───────────────────────────────┤
│  Maybe  │   ...                │  Lib                │  ...                          │
├─────────┼──────────────────────┼─────────────────────┼───────────────────────────────┤
│  Mul    │   (import Prim.Int)  │  Prim.Int           │  5:0..5:0                     │
│         │                      │                     │  import Prim.Int (class Mul)  │
├─────────┼──────────────────────┼─────────────────────┼───────────────────────────────┤
│  Maybe  │   (import Lib)       │  Lib                │  ...                          │
╰─────────┴──────────────────────┴─────────────────────┴───────────────────────────────╯


Completion at Position { line: 12, character: 8 }

```
just = J
--      ^
```

╭─────────┬─────────────────┬─────────────────────┬─────────────────────────╮
│  label  │  label_detail   │  label_description  │  additional_text_edits  │
├─────────┼─────────────────┼─────────────────────┼─────────────────────────┤
│  Just   │   ...           │  Lib                │  ...                    │
├─────────┼─────────────────┼─────────────────────┼─────────────────────────┤
│  Just   │   (import Lib)  │  Lib                │  ...                    │
╰─────────┴─────────────────┴─────────────────────┴─────────────────────────╯


Completion at Position { line: 15, character: 22 }

```
nothing :: forall a. M
--                    ^
```

╭─────────┬──────────────────────┬─────────────────────┬───────────────────────────────╮
│  label  │  label_detail        │  label_description  │  additional_text_edits        │
├─────────┼──────────────────────┼─────────────────────┼───────────────────────────────┤
│  Maybe  │   ...                │  Lib                │  ...                          │
├─────────┼──────────────────────┼─────────────────────┼───────────────────────────────┤
│  Mul    │   (import Prim.Int)  │  Prim.Int           │  5:0..5:0                     │
│         │                      │                     │  import Prim.Int (class Mul)  │
├─────────┼──────────────────────┼─────────────────────┼───────────────────────────────┤
│  Maybe  │   (import Lib)       │  Lib                │  ...                          │
╰─────────┴──────────────────────┴─────────────────────┴───────────────────────────────╯


Completion at Position { line: 17, character: 11 }

```
nothing = N
--         ^
```

╭───────────┬─────────────────┬─────────────────────┬─────────────────────────╮
│  label    │  label_detail   │  label_description  │  additional_text_edits  │
├───────────┼─────────────────┼─────────────────────┼─────────────────────────┤
│  Nothing  │   ...           │  Lib                │  ...                    │
├───────────┼─────────────────┼─────────────────────┼─────────────────────────┤
│  Nothing  │   (import Lib)  │  Lib                │  ...                    │
╰───────────┴─────────────────┴─────────────────────┴─────────────────────────╯


Completion at Position { line: 21, character: 12 }

```
refQ = Lib.l
--          ^
```

╭─────────┬────────────────┬─────────────────────┬─────────────────────────╮
│  label  │  label_detail  │  label_description  │  additional_text_edits  │
├─────────┼────────────────┼─────────────────────┼─────────────────────────┤
│  plus   │   ...          │  Lib                │  ...                    │
├─────────┼────────────────┼─────────────────────┼─────────────────────────┤
│  life   │   ...          │  Lib                │  ...                    │
╰─────────┴────────────────┴─────────────────────┴─────────────────────────╯


Completion at Position { line: 24, character: 29 }

```
justQ :: forall a. a -> Lib.M
--                           ^
```

╭─────────┬────────────────┬─────────────────────┬─────────────────────────╮
│  label  │  label_detail  │  label_description  │  additional_text_edits  │
├─────────┼────────────────┼─────────────────────┼─────────────────────────┤
│  Maybe  │   ...          │  Lib                │  ...                    │
╰─────────┴────────────────┴─────────────────────┴─────────────────────────╯


Completion at Position { line: 26, character: 8 }

```
justQ = J
--      ^
```

╭─────────┬─────────────────┬─────────────────────┬─────────────────────────╮
│  label  │  label_detail   │  label_description  │  additional_text_edits  │
├─────────┼─────────────────┼─────────────────────┼─────────────────────────┤
│  Just   │   ...           │  Lib                │  ...                    │
├─────────┼─────────────────┼─────────────────────┼─────────────────────────┤
│  Just   │   (import Lib)  │  Lib                │  ...                    │
╰─────────┴─────────────────┴─────────────────────┴─────────────────────────╯


Completion at Position { line: 29, character: 27 }

```
nothingQ :: forall a. Lib.M
--                         ^
```

╭─────────┬────────────────┬─────────────────────┬─────────────────────────╮
│  label  │  label_detail  │  label_description  │  additional_text_edits  │
├─────────┼────────────────┼─────────────────────┼─────────────────────────┤
│  Maybe  │   ...          │  Lib                │  ...                    │
╰─────────┴────────────────┴─────────────────────┴─────────────────────────╯


Completion at Position { line: 31, character: 16 }

```
nothingQ = Lib.N
--              ^
```

╭───────────┬────────────────┬─────────────────────┬─────────────────────────╮
│  label    │  label_detail  │  label_description  │  additional_text_edits  │
├───────────┼────────────────┼─────────────────────┼─────────────────────────┤
│  Nothing  │   ...          │  Lib                │  ...                    │
╰───────────┴────────────────┴─────────────────────┴─────────────────────────╯


Completion at Position { line: 34, character: 16 }

```
moduleNameQ = Li
--              ^
```

╭────────────┬────────────────┬─────────────────────┬─────────────────────────╮
│  label     │  label_detail  │  label_description  │  additional_text_edits  │
├────────────┼────────────────┼─────────────────────┼─────────────────────────┤
│  Lib       │   ...          │  Lib                │  ...                    │
├────────────┼────────────────┼─────────────────────┼─────────────────────────┤
│  nothingQ  │   ...          │  Local              │  ...                    │
├────────────┼────────────────┼─────────────────────┼─────────────────────────┤
│  life      │   ...          │  Lib                │  ...                    │
╰────────────┴────────────────┴─────────────────────┴─────────────────────────╯


Completion at Position { line: 37, character: 24 }

```
fullModuleNameQ = Data.M
--                      ^
```

╭──────────────┬────────────────┬─────────────────────┬─────────────────────────╮
│  label       │  label_detail  │  label_description  │  additional_text_edits  │
├──────────────┼────────────────┼─────────────────────┼─────────────────────────┤
│  Data.Maybe  │   ...          │  Data.Maybe         │  ...                    │
╰──────────────┴────────────────┴─────────────────────┴─────────────────────────╯
